# Building-Analysis

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/routes/: __init__.py  dashboard.py  ml.py  notes.py  pipeline.py  upload.py
app/core/: config.py  logging.py
app/services/analysis/: image_manifest.py  sentiment.py  unified_analyzer.py  vlm_classifier.py
app/services/importers/: html_extractor.py  xhs_html.py
backend/: server.py
cli/: main.py
configs/: interest_taxonomy.json
docs/: api.md  architecture.md
frontend/: app.js  index.html  package-lock.json  package.json  styles.css  tsconfig.json
frontend/src/: App.vue
frontend/src/api/: index.ts  pipeline.ts
frontend/src/components/: README.md
frontend/src/router/: index.ts
frontend/src/stores/: dashboard.ts
frontend/src/views/: Dashboard.vue  Images.vue  Models.vue  Notes.vue  Pipeline.vue
ml/: __init__.py  sentiment_svm.py  vlm_model.py  vlm_trainer.py
scripts/: convert_csv.py
src/: __init__.py  main.py  paths.py  utils.py
src/analysis/: analyze_text_sentiment.py  build_image_manifest.py  classify_with_vlm.py  generate_management_recommendations.py
src/importers/: __init__.py  xhs_html_importer.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_sentiment.py
